--- a/index.html
+++ b/index.html
@@ -95,30 +95,30 @@
         <tbody>
         <tr class="odd">
         <td><a
-        href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[01]</a>
+        href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[1]</a>
         divisibilty tricks</td>
         <td><a
-        href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[02]</a>
+        href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[2]</a>
         writing solutions</td>
         <td><a
-        href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[03]</a>
+        href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[3]</a>
         pigeonhole principle</td>
         <td><a
-        href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[04]</a>
+        href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[4]</a>
         series and products</td>
         </tr>
         <tr class="even">
         <td><a
-        href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[05]</a>
+        href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[5]</a>
         intro geometry</td>
         <td><a
-        href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[06]</a>
+        href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[6]</a>
         number bases &amp; induction</td>
         <td><a
-        href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[07]</a>
+        href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[7]</a>
         points in a triangle</td>
         <td><a
-        href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[08]</a>
+        href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[8]</a>
         cyclic quadrilaterals</td>
         </tr>
         </tbody>
@@ -280,7 +280,7 @@
         or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
       </p>
       <p>
-        The colour scheme used on this page is Kanagawa.
+        Made with a custom Pandoc template and stylesheet with the Kanagawa colour scheme.
       </p>
     </footer>
   </body>
