--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
         or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
       </p>
       <p>
-        The colour scheme used on this page is Kanagawa.
+        Made with a custom Pandoc template and stylesheet with the Kanagawa colour scheme.
       </p>
     </footer>
   </body>
