--- a/index.html
+++ b/index.html
@@ -20,30 +20,29 @@
     <main>
       <article>
         <h1 id="projects">Projects</h1>
-        <hgroup>
-        <h2 id="interplanetary-file-explorer">Interplanetary File
-        Explorer</h2>
+        <section id="interplanetary-file-explorer" class="wide">
+        <h2>Interplanetary File Explorer</h2>
         <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a
         href="https://github.com/youssefsoli/IPFE">[github]</a> <a
         href="https://devpost.com/software/changeme">[devpost]</a>
-        <p class="date">
+        <p class="right">
         Jan 2023
         </p>
-        </hgroup>
+        </section>
         <ul>
         <li>A visual file explorer of an IPFS written in Golang, Python,
         and JavaScript that uses one of Cohere’s NLP models to summarize
         and categorize files based on metadata, and Estuary’s API to
         fetch the files from the IPFS</li>
         </ul>
-        <hgroup>
-        <h2 id="prognosing-idiopathic-pulmonary-fibrosis">Prognosing
-        Idiopathic Pulmonary Fibrosis</h2>
+        <section id="prognosing-idiopathic-pulmonary-fibrosis"
+        class="wide">
+        <h2>Prognosing Idiopathic Pulmonary Fibrosis</h2>
         <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a>
-        <p class="date">
+        <p class="right">
         Dec 2023 - Jun 2021
         </p>
-        </hgroup>
+        </section>
         <ul>
         <li>Several machine learning models written to predict the
         deterioration of the condition of the lungs over time for
@@ -52,39 +51,37 @@
         </ul>
         <h1 id="presentations-lectures">Presentations &amp;
         Lectures</h1>
-        <hgroup>
-        <h2 id="streams-and-lazy-evaluation">Streams and Lazy
-        Evaluation</h2>
+        <section id="streams-and-lazy-evaluation" class="wide">
+        <h2>Streams and Lazy Evaluation</h2>
         @ Webber Academy Programming Club <a
         href="./presentations/231013-streams/notes.py">[notes]</a>
-        <p class="date">
+        <p class="right">
         Oct 13, 2023
         </p>
-        </hgroup>
+        </section>
         <ul>
         <li>An introduction to simulating infinite lists with streams
         and their manipulation</li>
         </ul>
-        <hgroup>
-        <h2 id="on-the-catalan-numbers">On the Catalan Numbers</h2>
+        <section id="on-the-catalan-numbers" class="wide">
+        <h2>On the Catalan Numbers</h2>
         @ Webber Academy Math Society <a
         href="./presentations/231011-catalan-numbers/notes.pdf">[notes]</a>
-        <p class="date">
+        <p class="right">
         Oct 11, 2023
         </p>
-        </hgroup>
+        </section>
         <ul>
         <li>A derivation of the closed formula for the Catalan Numbers
         and examples of well known problems where the Catalan Numbers
         appear</li>
         </ul>
-        <hgroup>
-        <h2 id="high-school-math-competition-lessons">High School Math
-        Competition Lessons</h2>
-        <p class="date">
+        <section id="high-school-math-competition-lessons" class="wide">
+        <h2>High School Math Competition Lessons</h2>
+        <p class="right">
         Summer 2023
         </p>
-        </hgroup>
+        </section>
         <table style="width:100%;">
         <colgroup>
         <col style="width: 23%" />
@@ -123,39 +120,37 @@
         </tr>
         </tbody>
         </table>
-        <hgroup>
-        <h2 id="introductory-combinatory-logic">Introductory Combinatory
-        Logic</h2>
+        <section id="introductory-combinatory-logic" class="wide">
+        <h2>Introductory Combinatory Logic</h2>
         @ Webber Academy Math Society
-        <p class="date">
+        <p class="right">
         Oct 11, 2022
         </p>
-        </hgroup>
+        </section>
         <ul>
         <li>Introduction to combinatory logic; showing numbers and
         operations on numbers can be expressed as combinators</li>
         </ul>
         <h1 id="university-courses">University Courses</h1>
-        <p>Italics means self-taught or audited. Asterisks are external
-        resources.</p>
-        <hgroup>
-        <h2 id="waterloo-undergraduate-degree">Waterloo Undergraduate
-        Degree</h2>
+        <p>Italics means self-taught or audited. Repeated audited
+        courses vary by offering. Asterisks are external resources.</p>
+        <section id="waterloo-undergraduate-degree" class="wide">
+        <h2>Waterloo Undergraduate Degree</h2>
         : Bachelors of Computer Science
-        <p class="date">
+        <p class="right">
         2022 - Present
         </p>
-        </hgroup>
+        </section>
         <table style="width:99%;">
         <colgroup>
         <col style="width: 1%" />
         <col style="width: 11%" />
+        <col style="width: 12%" />
+        <col style="width: 17%" />
         <col style="width: 11%" />
-        <col style="width: 16%" />
-        <col style="width: 10%" />
         <col style="width: 11%" />
-        <col style="width: 14%" />
-        <col style="width: 20%" />
+        <col style="width: 15%" />
+        <col style="width: 17%" />
         </colgroup>
         <thead>
         <tr class="header">
@@ -222,32 +217,45 @@
         href="https://melczer.ca/330/WagnerNotes.pdf">*</a><a
         href="https://enumeration.ca/">*</a></em></td>
         <td><em>CS 485 <a
-        href="https://student.cs.uwaterloo.ca/~cs485/">*</a><a
-        href="https://cs.uwaterloo.ca/~ppoupart/teaching/cs485-winter16/">*</a></em></td>
+        href="https://cs.uwaterloo.ca/~ppoupart/teaching/cs485-winter16/">*</a><a
+        href="http://ciml.info/">*</a></em></td>
         </tr>
         </tbody>
         </table>
         <h1 id="textbooks-readings">Textbooks &amp; Readings</h1>
-        <h2 id="computer-science-textbooks">Computer Science
-        Textbooks</h2>
-        <p><strong>Completed</strong></p>
+        <h2 id="statistics-and-probability">Statistics and
+        Probability</h2>
         <ul>
-        <li><em>Learn You a Haskell for Great Good!</em> by Miran
-        Lipovača</li>
-        <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
-        href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
+        <li><em>Essential Statistics for Data Science</em> by Mu
+        Zhu</li>
+        <li><em>Probability and Random Processes</em> by Grimmet &amp;
+        Stirzaker</li>
         </ul>
-        <p><strong>In-Progress</strong></p>
+        <h2 id="machine-learning">Machine Learning</h2>
         <ul>
+        <li><em>A Course in Machine Learning</em> by Hal Daumé III</li>
         <li><em>Understanding Machine Learning: From Theory to
         Algorithms</em> by Shai Shalev-Shwartz, &amp; Shai
         Ben-David</li>
         </ul>
-        <p><strong>Reading List</strong></p>
+        <h2 id="computer-graphics">Computer Graphics</h2>
         <ul>
         <li><em>Real-Time Rendering</em> by Akenine-Möller, Haines,
         Hoffman, Pesce, Iwanicki, &amp; Hillaire</li>
-        <li><em>Specifying Systems</em> by Leslie Lamport</li>
+        </ul>
+        <h2 id="concurrency">Concurrency</h2>
+        <ul>
+        <li>♡ <em>Concurrency in Go</em> by Katherine Cox-Buday <a
+        href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
+        </ul>
+        <h2 id="logic">Logic</h2>
+        <ul>
+        <li>♡ <em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
+        </ul>
+        <h2 id="programming-languages">Programming Languages</h2>
+        <ul>
+        <li>♡ <em>Learn You a Haskell for Great Good!</em> by Miran
+        Lipovača</li>
         <li><em>Category Theory for Programmers</em> by Bartosz
         Milewski</li>
         <li><em>Real World Haskell</em> by O’Sullivan, Stewart &amp;
@@ -256,19 +264,8 @@
         by Abelson, Sussman, &amp; Sussman</li>
         </ul>
         <h2 id="mathematics-textbooks">Mathematics Textbooks</h2>
-        <p><strong>Completed</strong></p>
         <ul>
-        <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
-        </ul>
-        <p><strong>In-Progress</strong></p>
-        <ul>
-        <li><em>Essential Statistics for Data Science</em> by Mu
-        Zhu</li>
-        </ul>
-        <p><strong>Reading List</strong></p>
-        <ul>
-        <li><em>Probability and Random Processes</em> by Grimmet &amp;
-        Stirzaker</li>
+        <li><em>Specifying Systems</em> by Leslie Lamport</li>
         </ul>
       </article>
     </main>
@@ -280,7 +277,7 @@
         or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
       </p>
       <p>
-        Made with a custom Pandoc template and stylesheet with the Kanagawa colour scheme.
+        Static HTML made with Pandoc and styled with the Kanagawa colour scheme to contribute to a lightweight web.
       </p>
     </footer>
   </body>
