--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
         or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
       </p>
       <p>
-        Made with a custom Pandoc template and stylesheet with the Kanagawa colour scheme.
+        Static HTML made with Pandoc and styled with the Kanagawa colour scheme to contribute to a lightweight web.
       </p>
     </footer>
   </body>
