--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
         <col style="width: 1%" />
         <col style="width: 11%" />
         <col style="width: 12%" />
-        <col style="width: 17%" />
-        <col style="width: 11%" />
+        <col style="width: 16%" />
+        <col style="width: 16%" />
         <col style="width: 11%" />
         <col style="width: 15%" />
-        <col style="width: 17%" />
+        <col style="width: 13%" />
         </colgroup>
         <thead>
         <tr class="header">
@@ -196,7 +196,7 @@
         href="https://www.richardwu.ca/notes/math247-notes.pdf">*</a></td>
         <td>STAT 240</td>
         <td>CS 245E <a
-        href="https://isbnsearch.org/isbn/0122384520">*</a></td>
+        href="https://www.youtube.com/playlist?list=PLPW2keNyw-utXOOzLR-Wp1p0eE5LEtv3N">*</a></td>
         <td>CS 246E <a
         href="https://notes.sibeliusp.com/pdf/1189/cs246e.pdf">*</a></td>
         <td></td>
@@ -210,52 +210,54 @@
         href="https://doi.org/10.1093/oso/9780192867735.001.0001">*</a></td>
         <td>CO 255 <a
         href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">*</a></td>
-        <td>CS 240 <a
-        href="https://cs.uwaterloo.ca/~plragde/flaneries/FDS/">*</a></td>
+        <td>CS 240</td>
         <td>CS 241</td>
         <td><em>CO 330 <a
         href="https://melczer.ca/330/WagnerNotes.pdf">*</a><a
         href="https://enumeration.ca/">*</a></em></td>
         <td><em>CS 485 <a
-        href="https://cs.uwaterloo.ca/~ppoupart/teaching/cs485-winter16/">*</a><a
-        href="http://ciml.info/">*</a></em></td>
+        href="https://cs.uwaterloo.ca/~ppoupart/teaching/cs485-winter16/">*</a></em></td>
         </tr>
         </tbody>
         </table>
         <h1 id="textbooks-readings">Textbooks &amp; Readings</h1>
-        <h2 id="statistics-and-probability">Statistics and
-        Probability</h2>
+        <h2 id="completed">Completed</h2>
+        <p><strong>Concurrency</strong></p>
+        <ul>
+        <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
+        href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
+        </ul>
+        <p><strong>Logic</strong></p>
+        <ul>
+        <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
+        </ul>
+        <p><strong>Programming Languages</strong></p>
+        <ul>
+        <li><em>Learn You a Haskell for Great Good!</em> by Miran
+        Lipovača</li>
+        </ul>
+        <h2 id="reading-list">Reading List</h2>
+        <p><strong>Statistics and Probability</strong></p>
         <ul>
         <li><em>Essential Statistics for Data Science</em> by Mu
         Zhu</li>
         <li><em>Probability and Random Processes</em> by Grimmet &amp;
         Stirzaker</li>
         </ul>
-        <h2 id="machine-learning">Machine Learning</h2>
+        <p><strong>Machine Learning</strong></p>
         <ul>
         <li><em>A Course in Machine Learning</em> by Hal Daumé III</li>
         <li><em>Understanding Machine Learning: From Theory to
         Algorithms</em> by Shai Shalev-Shwartz, &amp; Shai
         Ben-David</li>
         </ul>
-        <h2 id="computer-graphics">Computer Graphics</h2>
+        <p><strong>Computer Graphics</strong></p>
         <ul>
         <li><em>Real-Time Rendering</em> by Akenine-Möller, Haines,
         Hoffman, Pesce, Iwanicki, &amp; Hillaire</li>
         </ul>
-        <h2 id="concurrency">Concurrency</h2>
+        <p><strong>Programming Languages</strong></p>
         <ul>
-        <li>♡ <em>Concurrency in Go</em> by Katherine Cox-Buday <a
-        href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
-        </ul>
-        <h2 id="logic">Logic</h2>
-        <ul>
-        <li>♡ <em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
-        </ul>
-        <h2 id="programming-languages">Programming Languages</h2>
-        <ul>
-        <li>♡ <em>Learn You a Haskell for Great Good!</em> by Miran
-        Lipovača</li>
         <li><em>Category Theory for Programmers</em> by Bartosz
         Milewski</li>
         <li><em>Real World Haskell</em> by O’Sullivan, Stewart &amp;
@@ -263,7 +265,7 @@
         <li><em>Structure and Interpretation of Computer Programs</em>
         by Abelson, Sussman, &amp; Sussman</li>
         </ul>
-        <h2 id="mathematics-textbooks">Mathematics Textbooks</h2>
+        <p><strong>Systems Design</strong></p>
         <ul>
         <li><em>Specifying Systems</em> by Leslie Lamport</li>
         </ul>
