added info about next term

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
         <table style="width:99%;">
         <colgroup>
         <col style="width: 1%" />
-        <col style="width: 11%" />
         <col style="width: 12%" />
-        <col style="width: 16%" />
+        <col style="width: 12%" />
+        <col style="width: 17%" />
         <col style="width: 16%" />
         <col style="width: 11%" />
-        <col style="width: 15%" />
+        <col style="width: 13%" />
         <col style="width: 13%" />
         </colgroup>
         <thead>
@@ -212,11 +212,21 @@
         href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">*</a></td>
         <td>CS 240</td>
         <td>CS 241</td>
+        <td><em>CS 485 <a
+        href="https://cs.uwaterloo.ca/~ppoupart/teaching/cs485-winter16/">*</a></em></td>
+        <td></td>
+        </tr>
+        <tr class="even">
+        <td>S ’24</td>
+        <td>COOP 2</td>
+        <td>PD 10</td>
         <td><em>CO 330 <a
         href="https://melczer.ca/330/WagnerNotes.pdf">*</a><a
         href="https://enumeration.ca/">*</a></em></td>
-        <td><em>CS 485 <a
-        href="https://cs.uwaterloo.ca/~ppoupart/teaching/cs485-winter16/">*</a></em></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         </tr>
         </tbody>
         </table>
@@ -227,7 +237,7 @@
         <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
         href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
         </ul>
-        <p><strong>Logic</strong></p>
+        <p><strong>Formal Logic</strong></p>
         <ul>
         <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
         </ul>
@@ -236,17 +246,24 @@
         <li><em>Learn You a Haskell for Great Good!</em> by Miran
         Lipovača</li>
         </ul>
-        <h2 id="reading-list">Reading List</h2>
-        <p><strong>Statistics and Probability</strong></p>
+        <h2 id="in-progress">In Progress</h2>
+        <p><strong>Probability &amp; Statistics</strong></p>
         <ul>
-        <li><em>Essential Statistics for Data Science</em> by Mu
-        Zhu</li>
+        <li><em>Essential Statistics for Data Science: A Concise Crash
+        Course</em> by Mu Zhu</li>
+        </ul>
+        <p><strong>Machine Learning</strong></p>
+        <ul>
+        <li><em>A Course in Machine Learning</em> by Hal Daumé III</li>
+        </ul>
+        <h2 id="to-read">To Read</h2>
+        <p><strong>Probability &amp; Statistics</strong></p>
+        <ul>
         <li><em>Probability and Random Processes</em> by Grimmet &amp;
         Stirzaker</li>
         </ul>
         <p><strong>Machine Learning</strong></p>
         <ul>
-        <li><em>A Course in Machine Learning</em> by Hal Daumé III</li>
         <li><em>Understanding Machine Learning: From Theory to
         Algorithms</em> by Shai Shalev-Shwartz, &amp; Shai
         Ben-David</li>
@@ -265,7 +282,7 @@
         <li><em>Structure and Interpretation of Computer Programs</em>
         by Abelson, Sussman, &amp; Sussman</li>
         </ul>
-        <p><strong>Systems Design</strong></p>
+        <p><strong>System Design</strong></p>
         <ul>
         <li><em>Specifying Systems</em> by Leslie Lamport</li>
         </ul>
