added two column and wargame

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Arnav Kumar</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
+        <link rel="stylesheet" href="./assets/episodic.css"/>
+      </head>
   <body>
     <div class="bg-fixed"></div>
     <header>
@@ -16,8 +16,8 @@
       </nav>
     </header>
     <main>
-      <div class="topicscol">
-      <section id="projects" class="topic">
+      <div class="column">
+      <section id="projects" class="episode">
       <h1>Projects</h1>
       <section id="interplanetary-file-explorer" class="wide">
       <h2>Interplanetary File Explorer</h2>
@@ -49,7 +49,7 @@
       the prediction</li>
       </ul>
       </section>
-      <section id="presentations-lectures" class="topic">
+      <section id="presentations-lectures" class="episode">
       <h1>Presentations &amp; Lectures</h1>
       <section id="streams-and-lazy-evaluation" class="wide">
       <h2>Streams and Lazy Evaluation</h2>
@@ -134,9 +134,31 @@
       operations on numbers can be expressed as combinators</li>
       </ul>
       </section>
+      <section id="wargames" class="episode">
+      <h1>Wargames</h1>
+      <p>From Wikipedia, “wargames are cyber-security challenges
+      involving exploitations in systems or applications”. As a way to
+      learn, they teach you a lot about building systems and the
+      technical mechanics of software. Here are the notes I have made so
+      far while doing wargames.</p>
+      <table>
+      <colgroup>
+      <col style="width: 53%" />
+      <col style="width: 46%" />
+      </colgroup>
+      <tbody>
+      <tr class="odd">
+      <td><a href="./wargame/we-chall/index.html">[1]</a> We Chall
+      challenges</td>
+      <td><a href="./wargame/pwnable-kr/index.html">[2]</a>
+      pwnable.kr</td>
+      </tr>
+      </tbody>
+      </table>
+      </section>
       </div>
-      <div class="topicscol">
-      <section id="university-courses" class="topic">
+      <div class="column">
+      <section id="university-courses" class="episode">
       <h1>University Courses</h1>
       <p>Italics means self-taught or audited. Asterisks are external
       resources.</p>
@@ -237,7 +259,7 @@
       </tbody>
       </table>
       </section>
-      <section id="textbooks-readings" class="topic">
+      <section id="textbooks-readings" class="episode">
       <h1>Textbooks &amp; Readings</h1>
       <h2 id="completed">Completed</h2>
       <p><strong>Concurrency</strong></p>
@@ -254,44 +276,15 @@
       <li><em>Learn You a Haskell for Great Good!</em> by Miran
       Lipovača</li>
       </ul>
-      <h2 id="in-progress">In Progress</h2>
       <p><strong>Probability &amp; Statistics</strong></p>
       <ul>
       <li><em>Essential Statistics for Data Science: A Concise Crash
       Course</em> by Mu Zhu</li>
       </ul>
+      <h2 id="in-progress">In Progress</h2>
       <p><strong>Machine Learning</strong></p>
       <ul>
       <li><em>A Course in Machine Learning</em> by Hal Daumé III</li>
-      </ul>
-      <h2 id="to-read">To Read</h2>
-      <p><strong>Probability &amp; Statistics</strong></p>
-      <ul>
-      <li><em>Probability and Random Processes</em> by Grimmet &amp;
-      Stirzaker</li>
-      </ul>
-      <p><strong>Machine Learning</strong></p>
-      <ul>
-      <li><em>Understanding Machine Learning: From Theory to
-      Algorithms</em> by Shai Shalev-Shwartz, &amp; Shai Ben-David</li>
-      </ul>
-      <p><strong>Computer Graphics</strong></p>
-      <ul>
-      <li><em>Real-Time Rendering</em> by Akenine-Möller, Haines,
-      Hoffman, Pesce, Iwanicki, &amp; Hillaire</li>
-      </ul>
-      <p><strong>Programming Languages</strong></p>
-      <ul>
-      <li><em>Category Theory for Programmers</em> by Bartosz
-      Milewski</li>
-      <li><em>Real World Haskell</em> by O’Sullivan, Stewart &amp;
-      Goerzen</li>
-      <li><em>Structure and Interpretation of Computer Programs</em> by
-      Abelson, Sussman, &amp; Sussman</li>
-      </ul>
-      <p><strong>System Design</strong></p>
-      <ul>
-      <li><em>Specifying Systems</em> by Leslie Lamport</li>
       </ul>
       </section>
       </div>
