--- a/index.html
+++ b/index.html
@@ -6,293 +6,270 @@
         <link rel="stylesheet" href="./assets/episodic.css"/>
       </head>
   <body>
-    <div class="bg-fixed"></div>
-    <main>
-      <header>
-        <hgroup>
-          
-          <h1 id="title">Arnav Kumar</h1>
-        </hgroup>
-                <p><a href="https://github.com/arnavcs">[github]</a> <a
+    <header>
+      <hgroup>
+        
+        <h1 id="title">Arnav Kumar</h1>
+      </hgroup>
+            <p><a href="https://github.com/arnavcs">[github]</a> <a
 href="./resume-cv/resume.pdf">[resume]</a> <a
 href="./resume-cv/cv.pdf">[CV]</a></p>
-              </header>
-      <div class="intro">
-      <section id="site-introduction" class="episode">
-      <h1>Site Introduction</h1>
-      <ul>
-      <li>Links presented in round brackets like <a href="">(*)</a> are
-      to content which I did not create, whereas those in square
-      brackets like <a href="">[*]</a> are to content which I
-      created.</li>
-      </ul>
-      </section>
-      </div>
-      <div class="left-col">
-      <section id="formal-education" class="episode">
-      <h1>Formal Education</h1>
-      <p>Italics means self-taught or audited.</p>
-      <section id="waterloo-undergraduate-degree" class="wide">
-      <h2>Waterloo Undergraduate Degree</h2>
-      : Bachelors of Computer Science
-      <p class="right">
-      2022 - Present
-      </p>
-      </section>
-      <table style="width:99%;">
-      <colgroup>
-      <col style="width: 1%" />
-      <col style="width: 15%" />
-      <col style="width: 16%" />
-      <col style="width: 22%" />
-      <col style="width: 21%" />
-      <col style="width: 15%" />
-      <col style="width: 2%" />
-      <col style="width: 2%" />
-      </colgroup>
-      <thead>
-      <tr class="header">
-      <th>Term</th>
-      <th colspan="7">Courses</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr class="odd">
-      <td>F ’22</td>
-      <td>MATH 145</td>
-      <td>MATH 147</td>
-      <td>CS 145</td>
-      <td>ENGL 109</td>
-      <td>PHYS 121</td>
-      <td></td>
-      <td></td>
-      </tr>
-      <tr class="even">
-      <td>W ’23</td>
-      <td>MATH 146</td>
-      <td>MATH 148</td>
-      <td>CS 146</td>
-      <td>CS 136L</td>
-      <td>PD 1</td>
-      <td>PHYS 122</td>
-      <td>ENGL 108B</td>
-      </tr>
-      <tr class="odd">
-      <td>S ’23</td>
-      <td>COOP 1</td>
-      <td>PD 11</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      </tr>
-      <tr class="even">
-      <td>F ’23</td>
-      <td>MATH 245</td>
-      <td>MATH 247 <a
-      href="https://www.richardwu.ca/notes/math247-notes.pdf">(*)</a></td>
-      <td>STAT 240</td>
-      <td>CS 245E <a
-      href="https://www.youtube.com/playlist?list=PLPW2keNyw-utXOOzLR-Wp1p0eE5LEtv3N">(*)</a></td>
-      <td>CS 246E <a
-      href="https://notes.sibeliusp.com/pdf/1189/cs246e.pdf">(*)</a></td>
-      <td></td>
-      <td></td>
-      </tr>
-      <tr class="odd">
-      <td>W ’24</td>
-      <td>MATH 249 <a
-      href="https://melczer.ca/249/wagner_239_249_notes.pdf">(*)</a></td>
-      <td>STAT 241 <a
-      href="https://doi.org/10.1093/oso/9780192867735.001.0001">(*)</a></td>
-      <td>CO 255 <a
-      href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">(*)</a></td>
-      <td>CS 240</td>
-      <td>CS 241</td>
-      <td></td>
-      <td></td>
-      </tr>
-      <tr class="even">
-      <td>S ’24</td>
-      <td>COOP 2</td>
-      <td>PD 10</td>
-      <td>CS 251</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      </tr>
-      </tbody>
-      </table>
-      </section>
-      <section id="presentations-lectures" class="episode">
-      <h1>Presentations &amp; Lectures</h1>
-      <section id="streams-and-lazy-evaluation" class="wide">
-      <h2>Streams and Lazy Evaluation</h2>
-      @ Webber Academy Programming Club <a
-      href="./presentations/231013-streams/notes.py">[notes]</a>
-      <p class="right">
-      Oct 13, 2023
-      </p>
-      </section>
-      <ul>
-      <li>An introduction to simulating infinite lists with streams and
-      their manipulation</li>
-      </ul>
-      <section id="on-the-catalan-numbers" class="wide">
-      <h2>On the Catalan Numbers</h2>
-      @ Webber Academy Math Society <a
-      href="./presentations/231011-catalan-numbers/notes.pdf">[notes]</a>
-      <p class="right">
-      Oct 11, 2023
-      </p>
-      </section>
-      <ul>
-      <li>A derivation of the closed formula for the Catalan Numbers and
-      examples of well known problems where the Catalan Numbers
-      appear</li>
-      </ul>
-      <section id="high-school-math-competition-lessons" class="wide">
-      <h2>High School Math Competition Lessons</h2>
-      <p class="right">
-      Summer 2023
-      </p>
-      </section>
-      <table style="width:100%;">
-      <colgroup>
-      <col style="width: 33%" />
-      <col style="width: 32%" />
-      <col style="width: 34%" />
-      </colgroup>
-      <tbody>
-      <tr class="odd">
-      <td><a
-      href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[1]</a>
-      divisibilty tricks</td>
-      <td><a
-      href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[2]</a>
-      writing solutions</td>
-      <td><a
-      href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[3]</a>
-      pigeonhole principle</td>
-      </tr>
-      <tr class="even">
-      <td><a
-      href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[4]</a>
-      series and products</td>
-      <td><a
-      href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[5]</a>
-      intro geometry</td>
-      <td><a
-      href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[6]</a>
-      number bases &amp; induction</td>
-      </tr>
-      <tr class="odd">
-      <td><a
-      href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[7]</a>
-      points in a triangle</td>
-      <td><a
-      href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[8]</a>
-      cyclic quadrilaterals</td>
-      <td></td>
-      </tr>
-      </tbody>
-      </table>
-      <section id="introductory-combinatory-logic" class="wide">
-      <h2>Introductory Combinatory Logic</h2>
-      @ Webber Academy Math Society
-      <p class="right">
-      Oct 11, 2022
-      </p>
-      </section>
-      <ul>
-      <li>Introduction to combinatory logic; showing numbers and
-      operations on numbers can be expressed as combinators</li>
-      </ul>
-      </section>
-      </div>
-      <div class="right-col">
-      <section id="projects" class="episode">
-      <h1>Projects</h1>
-      <section id="interplanetary-file-explorer" class="wide">
-      <h2>Interplanetary File Explorer</h2>
-      <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a
-      href="https://github.com/youssefsoli/IPFE">[github]</a> <a
-      href="https://devpost.com/software/changeme">[devpost]</a>
-      <p class="right">
-      Jan 2023
-      </p>
-      </section>
-      <ul>
-      <li>A visual file explorer of an IPFS written in Golang, Python,
-      and JavaScript that uses one of Cohere’s NLP models to summarize
-      and categorize files based on metadata, and Estuary’s API to fetch
-      the files from the IPFS</li>
-      </ul>
-      <section id="prognosing-idiopathic-pulmonary-fibrosis"
-      class="wide">
-      <h2>Prognosing Idiopathic Pulmonary Fibrosis</h2>
-      <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a>
-      <p class="right">
-      Dec 2020 - Jun 2021
-      </p>
-      </section>
-      <ul>
-      <li>Several machine learning models written to predict the
-      deterioration of the condition of the lungs over time for patients
-      of Idiopathic Pulmonary Fibrosis and give a level of confidence in
-      the prediction</li>
-      </ul>
-      </section>
-      <section id="self-learning" class="episode">
-      <h1>Self-Learning</h1>
-      <h2 id="concurrency">Concurrency</h2>
-      <ul>
-      <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
-      href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
-      </ul>
-      <h2 id="formal-logic">Formal Logic</h2>
-      <ul>
-      <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
-      </ul>
-      <h2 id="programming-languages">Programming Languages</h2>
-      <ul>
-      <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
-      <a href="https://learnyouahaskell.com/">(book)</a></li>
-      </ul>
-      <h2 id="machine-learning">Machine Learning</h2>
-      <ul>
-      <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
-      href="http://ciml.info/">(book)</a> (in progress)</li>
-      </ul>
-      <h2 id="cyber-security">Cyber Security</h2>
-      <ul>
-      <li>We Chall <a
-      href="https://www.wechall.net/challs">(challenges)</a> <a
-      href="./wargame/we-chall/index.html">[hints &amp; notes]</a> (in
-      progress)</li>
-      </ul>
-      <h2 id="graphics">Graphics</h2>
-      <ul>
-      <li>University of Utah CS 4600 <a
-      href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
-      <a
-      href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
-      (in progress)</li>
-      </ul>
-      </section>
-      </div>
-      <footer>
-                <p>Page part of <a
-href="https://ring.simonwu.dev/">(Simon’s Cozyring)</a>: <a
+          </header>
+    <hr class="lynx" />
+    <div class="intro">
+    <section id="site-introduction" class="episode">
+    <h1>Site Introduction</h1>
+    <ul>
+    <li>Links presented in round brackets like <a href="">(*)</a> are to
+    content which I did not create, whereas those in square brackets
+    like <a href="">[*]</a> are to content which I created.</li>
+    </ul>
+    </section>
+    </div>
+    <div class="left-col">
+    <section id="formal-education" class="episode">
+    <h1>Formal Education</h1>
+    <p>Italics means self-taught or audited.</p>
+    <h2
+    id="waterloo-undergraduate-degree-bachelors-of-computer-science"><strong>Waterloo
+    Undergraduate Degree</strong> : Bachelors of Computer Science</h2>
+    <table style="width:99%;">
+    <colgroup>
+    <col style="width: 1%" />
+    <col style="width: 15%" />
+    <col style="width: 16%" />
+    <col style="width: 22%" />
+    <col style="width: 21%" />
+    <col style="width: 15%" />
+    <col style="width: 2%" />
+    <col style="width: 2%" />
+    </colgroup>
+    <thead>
+    <tr class="header">
+    <th>Term</th>
+    <th colspan="7">Courses</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="odd">
+    <td>F ’22</td>
+    <td>MATH 145</td>
+    <td>MATH 147</td>
+    <td>CS 145</td>
+    <td>ENGL 109</td>
+    <td>PHYS 121</td>
+    <td></td>
+    <td></td>
+    </tr>
+    <tr class="even">
+    <td>W ’23</td>
+    <td>MATH 146</td>
+    <td>MATH 148</td>
+    <td>CS 146</td>
+    <td>CS 136L</td>
+    <td>PD 1</td>
+    <td>PHYS 122</td>
+    <td>ENGL 108B</td>
+    </tr>
+    <tr class="odd">
+    <td>S ’23</td>
+    <td>COOP 1</td>
+    <td>PD 11</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    </tr>
+    <tr class="even">
+    <td>F ’23</td>
+    <td>MATH 245</td>
+    <td>MATH 247 <a
+    href="https://www.richardwu.ca/notes/math247-notes.pdf">(*)</a></td>
+    <td>STAT 240</td>
+    <td>CS 245E <a
+    href="https://www.youtube.com/playlist?list=PLPW2keNyw-utXOOzLR-Wp1p0eE5LEtv3N">(*)</a></td>
+    <td>CS 246E <a
+    href="https://notes.sibeliusp.com/pdf/1189/cs246e.pdf">(*)</a></td>
+    <td></td>
+    <td></td>
+    </tr>
+    <tr class="odd">
+    <td>W ’24</td>
+    <td>MATH 249 <a
+    href="https://melczer.ca/249/wagner_239_249_notes.pdf">(*)</a></td>
+    <td>STAT 241 <a
+    href="https://doi.org/10.1093/oso/9780192867735.001.0001">(*)</a></td>
+    <td>CO 255 <a
+    href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">(*)</a></td>
+    <td>CS 240</td>
+    <td>CS 241</td>
+    <td></td>
+    <td></td>
+    </tr>
+    <tr class="even">
+    <td>S ’24</td>
+    <td>COOP 2</td>
+    <td>PD 10</td>
+    <td>CS 251</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    </tr>
+    </tbody>
+    </table>
+    </section>
+    <section id="presentations-lectures" class="episode">
+    <h1>Presentations &amp; Lectures</h1>
+    <h2
+    id="streams-and-lazy-evaluation-webber-academy-programming-club-notes-13th-oct-2023"><strong>Streams
+    and Lazy Evaluation</strong> @ Webber Academy Programming Club <a
+    href="./presentations/231013-streams/notes.py">[notes]</a> <span
+    class="right">13<sup>th</sup> Oct 2023</span></h2>
+    <ul>
+    <li>An introduction to simulating infinite lists with streams and
+    their manipulation</li>
+    </ul>
+    <h2
+    id="on-the-catalan-numbers-webber-academy-math-society-notes-11th-oct-2023"><strong>On
+    the Catalan Numbers</strong> @ Webber Academy Math Society <a
+    href="./presentations/231011-catalan-numbers/notes.pdf">[notes]</a>
+    <span class="right">11<sup>th</sup> Oct 2023</span></h2>
+    <ul>
+    <li>A derivation of the closed formula for the Catalan Numbers and
+    examples of well known problems where the Catalan Numbers
+    appear</li>
+    </ul>
+    <h2
+    id="high-school-math-competition-lessons-summer-2023"><strong>High
+    School Math Competition Lessons</strong> <span class="right">Summer
+    2023</span></h2>
+    <table style="width:100%;">
+    <colgroup>
+    <col style="width: 33%" />
+    <col style="width: 32%" />
+    <col style="width: 34%" />
+    </colgroup>
+    <tbody>
+    <tr class="odd">
+    <td><a
+    href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[1]</a>
+    divisibilty tricks</td>
+    <td><a
+    href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[2]</a>
+    writing solutions</td>
+    <td><a
+    href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[3]</a>
+    pigeonhole principle</td>
+    </tr>
+    <tr class="even">
+    <td><a
+    href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[4]</a>
+    series and products</td>
+    <td><a
+    href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[5]</a>
+    intro geometry</td>
+    <td><a
+    href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[6]</a>
+    number bases &amp; induction</td>
+    </tr>
+    <tr class="odd">
+    <td><a
+    href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[7]</a>
+    points in a triangle</td>
+    <td><a
+    href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[8]</a>
+    cyclic quadrilaterals</td>
+    <td></td>
+    </tr>
+    </tbody>
+    </table>
+    <h2
+    id="introductory-combinatory-logic-webber-academy-math-society-11th-oct-2022"><strong>Introductory
+    Combinatory Logic</strong> @ Webber Academy Math Society <span
+    class="right">11<sup>th</sup> Oct 2022</span></h2>
+    <ul>
+    <li>Introduction to combinatory logic; showing numbers and
+    operations on numbers can be expressed as combinators</li>
+    </ul>
+    </section>
+    </div>
+    <div class="right-col">
+    <section id="projects" class="episode">
+    <h1>Projects</h1>
+    <h2
+    id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
+    File Explorer</strong> <a href="https://ipfe.elguindi.xyz/">[try
+    it]</a> <a href="https://github.com/youssefsoli/IPFE">[github]</a>
+    <a href="https://devpost.com/software/changeme">[devpost]</a> <span
+    class="right">Jan 2023</span></h2>
+    <ul>
+    <li>A visual file explorer of an IPFS written in Golang, Python, and
+    JavaScript that uses one of Cohere’s NLP models to summarize and
+    categorize files based on metadata, and Estuary’s API to fetch the
+    files from the IPFS</li>
+    </ul>
+    <h2
+    id="prognosing-idiopathic-pulmonary-fibrosis-cwsf-paper-dec-2020---jun-2021"><strong>Prognosing
+    Idiopathic Pulmonary Fibrosis</strong> <a
+    href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a> <span
+    class="right">Dec 2020 - Jun 2021</span></h2>
+    <ul>
+    <li>Several machine learning models written to predict the
+    deterioration of the condition of the lungs over time for patients
+    of Idiopathic Pulmonary Fibrosis and give a level of confidence in
+    the prediction</li>
+    </ul>
+    </section>
+    <section id="self-learning" class="episode">
+    <h1>Self-Learning</h1>
+    <h2 id="concurrency">Concurrency</h2>
+    <ul>
+    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
+    href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
+    </ul>
+    <h2 id="formal-logic">Formal Logic</h2>
+    <ul>
+    <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
+    </ul>
+    <h2 id="programming-languages">Programming Languages</h2>
+    <ul>
+    <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
+    <a href="https://learnyouahaskell.com/">(book)</a></li>
+    </ul>
+    <h2 id="machine-learning">Machine Learning</h2>
+    <ul>
+    <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
+    href="http://ciml.info/">(book)</a> (in progress)</li>
+    </ul>
+    <h2 id="cyber-security">Cyber Security</h2>
+    <ul>
+    <li>We Chall <a
+    href="https://www.wechall.net/challs">(challenges)</a> <a
+    href="./wargame/we-chall/index.html">[hints &amp; notes]</a> (in
+    progress)</li>
+    </ul>
+    <h2 id="graphics">Graphics</h2>
+    <ul>
+    <li>University of Utah CS 4600 <a
+    href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
+    <a
+    href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
+    (in progress)</li>
+    </ul>
+    </section>
+    </div>
+    <hr class="lynx" />
+    <footer>
+            <p>Page part of <a href="https://ring.simonwu.dev/">(Simon’s
+Cozyring)</a>: <a
 href="https://ring.simonwu.dev/prev/arnav">(previous)</a> <a
 href="https://ring.simonwu.dev/next/arnav">(next)</a> <a
 href="https://ring.simonwu.dev/random/arnav">(random)</a></p>
-                <p>
-          Contributing to a lightweight web. HTML generated with Pandoc.
-        </p>
-      </footer>
-    </main>
+            <p>
+        Contributing to a lightweight web. HTML generated with Pandoc.
+      </p>
+    </footer>
   </body>
 </html>
